--- a/db/tasks.json
+++ b/db/tasks.json
@@ -11,7 +11,7 @@
   },
   {
     "title": "Take a nap",
-    "completed": true,
+    "completed": false,
     "id": 3
   },
   {
@@ -21,12 +21,17 @@
   },
   {
     "title": "Do laundry",
-    "completed": true,
+    "completed": false,
     "id": 5
   },
   {
     "title": "laundry",
     "completed": false,
     "id": 6
+  },
+  {
+    "title": "",
+    "completed": false,
+    "id": 7
   }
 ]
