--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "dev": "ng serve --proxy-config proxy.conf.json",
+    "start": "tsx src/server",
     "dev-node": "tsx watch src/server",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
